		people.
	portability problem: although sleep() isn't interrupted by
		signals on my old BSD/OS development machine, it is
		interrupted by signals on all new systems. impact: if a
		supervised process dies quickly (but not too quickly),
		supervise's 1-second sleep is interrupted, and the
		process is restarted immediately. fix: new deepsleep().
	internal: switched signal handling in supervise and multilog
		to blocked-by-default.
	ui: multilog accepts ALRM to immediately rotate all cyclic logs
		for which current is nonempty. tnx Peter Samuel and
		William E. Baxter.
20010708
	portability problem: under System V, one process can hold many
		exclusive locks on one file. impact: no impact on normal
		use, but some of the setlock regression tests fail. fix:
		change the tests to invoke an intermediate sh. tnx Mads
		Eilertsen.
	internal: fitfiles() in multilog.
	ui: added readproctitle.
	ui: added svscanboot. tnx Matthias Andree.
	ui: svscan checks for log directory instead of sticky bit. tnx
		many people.
20010709
	ui: added pgrphack.
20010710
	internal: upgraded to latest installation system.
20010711
	version: daemontools 0.75, beta.
20010712
	internal: ./package/compile creates ./compile/home.
	internal: ./package/compile creates absolute ./compile/src
		symlink instead of using .., so ./compile can itself be
		a symlink. tnx Paul Jarc.
	portability problem: Solaris sh has a built-in test that doesn't
		support -e, even though the test program supports -e.
		impact: package/{compile,run,upgrade} fail. tnx Mate
		Wierdl. fix: use -d, -h, -r.
	version: daemontools 0.76, beta.

Dec 9, 2023
	version daemontools 0.77 (Roberto Puzzanghera)
	- errno patch
	- multilog_filesize_limit patch by Sam Tang, which extends the file log size limit to 100MB (default is 16MB).
	- multilog-readable_datetime patch, which replaces the timestamp with a human readable datetime.

July 2024
        version daemontools 0.78 (Roberto Puzzanghera)
	- fixed several compilation warnings
