@@ -2,7 +2,9 @@
 #define TIMESTAMP_H
 
 #define TIMESTAMP 25
+#define DATETIME  29
 
 extern void timestamp(char *);
+extern void readable_datetime(char *);
 
 #endif
